--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <div class="container">
 
       <h1>404</h1>
-      <p><strong>Liên kết không tồn tại.</strong></p>
+      <p><strong>Liên kết méo tồn tại</strong></p>
 
       <p>
-        Có thể trang website ban đầu đang được bảo trì nên liên kết này có thể cũng đang bảo trì.
+        Có thể trang Web ban đầu đang được bảo trì nên liên kết này có thể cũng đang bảo trì
       </p>
 
       <p>
-        Nếu bị truy cập vẫn thấy lỗi này thì hãy quay lại sau.
+        Nếu bị truy cập vẫn thấy lỗi này thì hãy quay lại sau. Xin cảm ưn :3
       </p>
 
 
