--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
     <div class="container">
 
-      <h1>404</h1>
+      <h1>Lỗi 404</h1>
       <p><strong>Liên kết méo tồn tại</strong></p>
 
       <p>
-        Có thể trang Web ban đầu đang được bảo trì nên liên kết này có thể cũng đang bảo trì
+        Có thể trang ban đầu đang được bảo trì nên liên kết này có thể cũng đang bảo trì
       </p>
 
       <p>
